--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -11,5 +11,7 @@
 	"Error.Passport.Email.Exists": "This email already exists. So try logging in.",
 	"Error.Passport.Username.Missing": "You need to supply a username",
 	"Error.Passport.Password.Missing": "Oh no, you haven't set a password yet!",
-	"Error.Passport.Generic": "Snap. Something went wrong with authorization."
+	"Error.Passport.Generic": "Snap. Something went wrong with authorization.",
+	"Error.Passport.FirstName.Missing": "You need to supply a first name.",
+	"Error.Passport.LastName.Missing": "You need to supply a last name."
 }
